Set checked as default for checkboxes

--- a/public/index.html
+++ b/public/index.html
@@ -109,11 +109,11 @@
 			  <input type="text" class="input-small" name="charId" placeholder="character id">
 				<br><br>
 			  <label class="checkbox">
-				<input type="checkbox" id="showSkillQueue" name="showSkillQueue"> Skill queue
+				<input type="checkbox" id="showSkillQueue" name="showSkillQueue" checked>Skill queue
 			  </label>
 			  <br>
 				<label class="checkbox">
-				<input type="checkbox" id="showQueueReminder" name="showQueueReminder"> Queue empty reminder
+				<input type="checkbox" id="showQueueReminder" name="showQueueReminder" checked>Queue empty reminder
 			  </label>
 				<br><br>
 			  <button type="submit" name="submit" id="submit" value="submit" class="btn">Create Calendar Link</button>
